--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <header>
+        <p>Some text</p>
         <nav>
             <button id="home-btn">Home</button>
             <button id="menu-btn">Menu</button>
